--- a/packages/bun-router/resources/views/blog-post.html
+++ b/packages/bun-router/resources/views/blog-post.html
@@ -6,7 +6,7 @@
 
     <div class="post-meta">
         <div class="tags">
-            <span class="tag">BunRouter</span>
+            <span class="tag">Router</span>
             <span class="tag">Views</span>
             <span class="tag">Example</span>
         </div>
