--- a/packages/bun-router/resources/views/home.html
+++ b/packages/bun-router/resources/views/home.html
@@ -22,9 +22,9 @@
         <pre><code>$ bun add bun-router</code></pre>
 
         <p>Create your first route:</p>
-        <pre><code>import { BunRouter } from 'bun-router'
+        <pre><code>import { Router } from 'bun-router'
 
-const router = new BunRouter()
+const router = new Router()
 
 router.get('/', () => new Response('Hello, World!'))
 
